<resources>
    <string name="app_name">AppTeka</string>
    <string name="action_settings">Settings</string>
    <string name="signInText">Sign In</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="enter">Sign In</string>
    <string name="registration">Registration</string>
    <string name="registrationText">Registration</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="email">Enter E-Mail</string>
    <string name="enterLogin">Enter Login</string>
    <string name="enterPassword">Enter Password</string>
    <string name="settingsText">Settings</string>
    <string name="host">Enter Server Host</string>
    <string name="port">Enter Server Port</string>
    <string name="save">Save</string>
    <string name="action_save">Save</string>
    <string name="drugName">Drug Name</string>
    <string name="drugType">Drug Type</string>
    <string name="drugCount">Drug Count</string>
    <string name="drugAppointment">Drug Appointment</string>
    <string name="drugDate">DD/MM/YYYY</string>
    <string name="title_activity_drug_list">DrugListActivity</string>
    <string name="search_drugs">Search Drugs</string>
    <string name="remember_me">Remember me</string>
    <string name="forget_password"><u>Forget password?</u></string>



</resources>
