<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="apptekaclient.spart.ru.appteka_client.activity.EditDrugActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/editDrugToolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent">


<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_centerInParent="true"
    android:orientation="vertical">


    <EditText
        android:id="@+id/drugName"
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:hint="@string/drugName"
        android:inputType="text"
        tools:ignore="TextFields" />

    <EditText
        android:id="@+id/drugType"
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:hint="@string/drugType"
        android:inputType="text"
        tools:ignore="TextFields" />
    <EditText
        android:id="@+id/drugCount"
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:hint="@string/drugCount"
        android:inputType="text"
        tools:ignore="TextFields" />
    <EditText
        android:id="@+id/drugAppointment"
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:hint="@string/drugAppointment"
        android:inputType="text"
        tools:ignore="TextFields" />
    <EditText
        android:id="@+id/drugDate"
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:hint="@string/drugDate"
        android:inputType="text"
        tools:ignore="TextFields" />

</LinearLayout>

        </RelativeLayout>


    </android.support.design.widget.AppBarLayout>

</android.support.constraint.ConstraintLayout>
